Fix company name

--- a/appinfo.json
+++ b/appinfo.json
@@ -3,7 +3,7 @@
     "capabilities": [
         ""
     ],
-    "companyName": "Pebble Technology",
+    "companyName": "Andrea Nodari",
     "enableMultiJS": false,
     "longName": "DO MORE",
     "projectType": "native",
